--- a/app/views/courses/4/_main.html.erb
+++ b/app/views/courses/4/_main.html.erb
@@ -44,31 +44,26 @@
 </div>
 <div class="fast-entry">
   <div class="fast-entry-links">
-    <a href="javascript:void(0)" class="btn btn-default">教学内容</a>
+    <a href="javascript:void(0)" class="btn btn-default">课程特色</a>
     &nbsp;&nbsp;
-    <a href="javascript:void(0)" class="btn btn-default">教学方法</a>
+    <a href="javascript:void(0)" class="btn btn-default">课程创新</a>
     &nbsp;&nbsp;
-    <a href="javascript:void(0)" class="btn btn-default">教学条件</a>
+    <a href="javascript:void(0)" class="btn btn-default">改进方向与途径</a>
     &nbsp;&nbsp;
-    <a href="javascript:void(0)" class="btn btn-default">教学效果</a>
-    &nbsp;&nbsp;
-    <a href="javascript:void(0)" class="btn btn-default">申报材料</a>
+    <a href="javascript:void(0)" class="btn btn-default">同类课程的比较</a>
   </div>
   <div class="fast-entry-content">
     <div class="entry-content">
-      <%= render partial: "courses/4/teach_content"%>
+      <%= render partial: "courses/4/teach_feature"%>
     </div>
     <div class="entry-content">
-      <%= render partial: "courses/4/teach_method"%>
+      <%= render partial: "courses/4/teach_innovate"%>
     </div>
     <div class="entry-content">
-      <%= render partial: "courses/4/teach_condition"%>
+      <%= render partial: "courses/4/teach_improve"%>
     </div>
     <div class="entry-content">
-      <%= render partial: "courses/4/teach_effect"%>
-    </div>
-    <div class="entry-content">
-      <%= render partial: "courses/4/teach_data" %>
+      <%= render partial: "courses/4/teach_compare"%>
     </div>
   </div>
 </div>
