--- a/app/views/courses/4/_course_home.html.erb
+++ b/app/views/courses/4/_course_home.html.erb
@@ -1,1 +1,11 @@
-_course_home.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程简介</strong></a><br><br>	
+<div class="container-fluid course-content-step-div">
+	<dl>
+		<dd style="text-indent:2em">《新能源汽车使用与维修》是新能源汽车专业方向的核心课程。以工学结合的专业核心课程群建设为出发点，构建《新能源汽车使用与维修》课程教学平台，校企合作、工学结合，共建《新能源汽车使用与维修》课程教学资源库。与汽车维修行业、企业的专家、专业核心课程骨干教师合作开发的配套教学的教材、课件和软件，形成工学结合、实践为先、特色并具有示范作用的专业精品课程。</dd>
+		<dd style="text-indent:2em">本教材结合新能源汽车行业的特点，重点介绍了有关新能源汽车的新知识、新技术、新技能、新服务等。对接行业职业标准、岗位要求和技术规范，进行专业“双证融通”试点，推动课程内容与职业标准对接、教学过程与生产过程对接、毕业证书与职业资格证书对接。</dd>
+		<dd style="text-indent:2em">本教材内容序化上借鉴学习德国汽车机电维修技师课程教学模式，结合本地的实际改编而成。以面向工作过程的学习领域为基础组织内容，按照学习目标、学习情境描述、情境导入、相关知识、资讯、决策、制定计划、任务实施（技能训练）、检查评估、任务评价反馈等构架知识和能力体系。在行业调研和资质分析的基础上， 根据检测维修行业的职业岗位知识与能力的需要，按新能源汽车维修的工艺过程和企业设置的工位编写的。</dd>
+		<dd style="text-indent:2em">设计了７个工作岗位核心任务、　55个学习情境和30个技能训练的任务实施、任务评价考核标准等内容，共计９６学时。<br>
+		本教材内容以新能源汽车安全的使用与维修知识为导入、新能源汽车结构与工作原理、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。</dd>
+		<dd style="text-indent:2em">本书由黄虎为主审，夏月琴担任主编，张璐嘉、林金地、刘延如担任副主编。由于编者水平和能力有限，可能会出现一些错误，敬请广大读者谅解和批评！</dd>
+	</dl>
+</div>
