--- a/app/views/courses/4/_course_setup.html.erb
+++ b/app/views/courses/4/_course_setup.html.erb
@@ -8,37 +8,37 @@
 <div class="container-fluid course-content-step-div">
 	<dl>
 		<dt>一．课程设计理念</dt>
-		<dt>1.服务于新能源汽车专业方向培养目标和定位</dt>
-		<dd style="text-indent:2em">服务于新能源汽车专业方向培养目标和定位,以岗位能力培养为核心，以理论与实践结合为手段，以任务驱动为起点，以典型新能源汽车使用与维修、检测工作任务流程程序化为教学内容，培养学生在掌握新能源汽车的基本理论和方法的基础上，具备新能源汽车使用与维修能力、管理能力和职业素养</dd>
-		<dd style="text-indent:2em">汽车产业发展使高职新能源汽车专业学生的就业和发展功能内涵得到了进一步的拓展。根据社会人才的需求设置专业，根据岗位工作内容开设课程,根据用人市场变化适时调整教学内容，构建以能力本位为核心，以就业为导向的新能源汽车维修、检测职业活动、教学活动课程体系是《新能源汽车使用与维修》课程改革的新动力</dd>
-		<dt>2. 《新能源汽车使用与维修》课程设计理念</dt>
-		<dd style="text-indent:2em">本课程根据任务引领型的项目活动要求，突破原有学科体系，以学习领域课程为切入点，注重学生实践技能的提高，融合新能源汽车职业技能考证项目，按照新能源汽车企业维修的基本流程，分七个学习任务：新能源汽车安全的使用与维修知识为导入、新能源汽车结构与工作原理、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。</dd>
-		<dd style="text-indent:2em">教学过程中采用德国双元制教学模式。教师的双重身份既是教员又是师傅，学生的双重身份既是学员又是学徒工，教学场所的双重作用既是理论教学的课堂又是实践教学的工作岗位场所。以新能源汽车企业维修工作岗位实际工作任务为载体设计教学活动的全过程，实现理实一体的教学，真枪实干，按工作岗位标准要求教师与学生。</dd>
+		<dt>1.服务于电动汽车专业方向培养目标和定位</dt>
+		<dd style="text-indent:2em">服务于电动汽车专业方向培养目标和定位,以岗位能力培养为核心，以理论与实践结合为手段，以任务驱动为起点，以典型电动汽车结构与维修（理实一体）、检测工作任务流程程序化为教学内容，培养学生在掌握电动汽车的基本理论和方法的基础上，具备电动汽车结构与维修（理实一体）能力、管理能力和职业素养</dd>
+		<dd style="text-indent:2em">汽车产业发展使高职电动汽车专业学生的就业和发展功能内涵得到了进一步的拓展。根据社会人才的需求设置专业，根据岗位工作内容开设课程,根据用人市场变化适时调整教学内容，构建以能力本位为核心，以就业为导向的电动汽车维修、检测职业活动、教学活动课程体系是《电动汽车结构与维修（理实一体）》课程改革的新动力</dd>
+		<dt>2. 《电动汽车结构与维修（理实一体）》课程设计理念</dt>
+		<dd style="text-indent:2em">本课程根据任务引领型的项目活动要求，突破原有学科体系，以学习领域课程为切入点，注重学生实践技能的提高，融合电动汽车职业技能考证项目，按照电动汽车企业维修的基本流程，分七个学习任务：电动汽车安全的使用与维修知识为导入、电动汽车结构与工作原理、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。</dd>
+		<dd style="text-indent:2em">教学过程中采用德国双元制教学模式。教师的双重身份既是教员又是师傅，学生的双重身份既是学员又是学徒工，教学场所的双重作用既是理论教学的课堂又是实践教学的工作岗位场所。以电动汽车企业维修工作岗位实际工作任务为载体设计教学活动的全过程，实现理实一体的教学，真枪实干，按工作岗位标准要求教师与学生。</dd>
 		<dd style="text-indent:2em">采用“学用一致，学工一体，培养学生的综合职业能力”理实一体的教学模式，在帮助学生理解理论知识的同时，让他们参与实践，获得感性认识，在积累实践经验的基础上提升理论积淀，加深对理论知识的理解。在实操中培养他们分析问题和解决问题的能力，学生通过学习获得与工作岗位所需一致的能力。课程设计选择源于实际的工作任务为载体，以学生为主体，按照汽车维修工作的实际过程展开，使工作过程转化为教师的教学过程，教学过程演化为学生的学习过程，学习过程就是汽车动力系统检测维修工作过程。
     教、学、做一体，理实一体的教学模式，为教师的理论知识和实践知识的结合创造发挥机遇，为学生的综合型应用技能人才的后续发展尊定基础。</dd>
-		<dd style="text-indent:2em">同时，我们加大对学生的实践与应用，建立了校内外实训基地，使学生的实践能力得到保证。通过实践训练、产学结合，使学生具备汽车新能源汽车使用与维修能力、管理能力和职业素养，满足市场经济对新能源汽车人才的基本要求，达到高等职业教育的要求。</dd>
-		<dt>3. 《新能源汽车使用与维修》课程评价方式</dt>
+		<dd style="text-indent:2em">同时，我们加大对学生的实践与应用，建立了校内外实训基地，使学生的实践能力得到保证。通过实践训练、产学结合，使学生具备汽车电动汽车结构与维修（理实一体）能力、管理能力和职业素养，满足市场经济对电动汽车人才的基本要求，达到高等职业教育的要求。</dd>
+		<dt>3. 《电动汽车结构与维修（理实一体）》课程评价方式</dt>
 		<dd style="text-indent:2em">课程考核评价方式，主要评价学生自主学习能力、实践操作掌握能力、企业工作岗位调查报告的写作能力。</dd>
 		<dd style="text-indent:2em">教学效果评价采取过程评价与结果评价相结合的方式，通过理论与实践相结合，重点评价学生的职业能力。</dd>
 		<dt>4．课程设计理念体现</dt>
 		<dd style="text-indent:2em">基于工作过程导向，发展实践创新观念；开展案例情景教学，真枪实干实际环境；突出学生主体为本，尊重个体差异施教；探索开发学习潜力，提升核心综合能力；注重学习过程评价，强调师生全员参与；利用校企合作多种资源，强化学生自主学习。</dd>
 		<dt>二．课程思路</dt>
 		<dt>1.“工学结合、校企结合、融合职业资格考证”课程设计思路</dt>
-		<dd style="text-indent:2em">根据新能源汽车使用与维修、检测工作流程，采用任务驱动式教学设计；以新能源汽车维修岗位能力培养为主线，采用“边讲边做，讲做结合”一体化教学方法。
-		在教学过程中注重以学生为中心，教师是学习的引导者和促进者，通过情景模拟、案例等教学方法，使学生逐步掌握汽车维修所需技能，培养学生的能力。课程教学应做到使学生贴近企业，贴近市场，让学生了解新能源汽车使用与维修的实际操作流程。</dd>
-		<dd style="text-indent:2em">到汽车维修企业进行工作岗位调查、维修工作过程及岗位能力需求的调研，从中获得新能源汽车与维修工作流程，以及汽车维修工作所需的技能目标和知识学习目标，在此基础上融合职业资格考证项目进行课程教学内容的设计。</dd>
+		<dd style="text-indent:2em">根据电动汽车结构与维修（理实一体）、检测工作流程，采用任务驱动式教学设计；以电动汽车维修岗位能力培养为主线，采用“边讲边做，讲做结合”一体化教学方法。
+		在教学过程中注重以学生为中心，教师是学习的引导者和促进者，通过情景模拟、案例等教学方法，使学生逐步掌握汽车维修所需技能，培养学生的能力。课程教学应做到使学生贴近企业，贴近市场，让学生了解电动汽车结构与维修（理实一体）的实际操作流程。</dd>
+		<dd style="text-indent:2em">到汽车维修企业进行工作岗位调查、维修工作过程及岗位能力需求的调研，从中获得电动汽车使用与维修工作流程，以及汽车维修工作所需的技能目标和知识学习目标，在此基础上融合职业资格考证项目进行课程教学内容的设计。</dd>
 		<dt>2．课程设计要素</dt>
-		<dd style="text-indent:2em">（1）本课程着重让学生掌握新能源汽车使用与维修的基本操作技能的要求和方法，对相关概念、原则及方法，系统的、全面的认识和理解。</dd>
+		<dd style="text-indent:2em">（1）本课程着重让学生掌握电动汽车结构与维修（理实一体）的基本操作技能的要求和方法，对相关概念、原则及方法，系统的、全面的认识和理解。</dd>
 		<dd style="text-indent:2em">（2）教学内容要兼顾广度和深度，本课程整体内容会具有关联性、梯度性、系统性、完整性、操作性和拓展性，为学生学好后续专业课程打下扎实的基础。</dd>
 		<dd style="text-indent:2em">（3）针对实践中直接应用的教学内容，强化要侧重培养学生的应用能力。</dd>
-		<dd style="text-indent:2em">（4）采用以工作过程为引领，新能源汽车与维修课程理实一体模块化教学方式，提高教学效果。</dd>
-		<dd style="text-indent:2em">（5）通过本课程学习，使学生具备新能源汽车维修行业企业岗位所需的基本知识、职业技能和职业能力。
+		<dd style="text-indent:2em">（4）采用以工作过程为引领，电动汽车使用与维修课程理实一体模块化教学方式，提高教学效果。</dd>
+		<dd style="text-indent:2em">（5）通过本课程学习，使学生具备电动汽车维修行业企业岗位所需的基本知识、职业技能和职业能力。
 		</dd>
 		<dt>3．课程设计方案</dt>
 		<dd style="text-indent:2em">（1）根据行业、企业调研进行教学设计。到上海汽车集团有限公司、国家机动车检测中心、上海市汽车修理有限公司、上海中科力帆电动汽车有限公司、上海幼狮高级轿车修理有限公司、上海宝尊汽车有限公司和部分汽车营销服务公司特约维修站等企业进行深度调研。</dd>
-		<dd style="text-indent:2em">到企业进行工作岗位、新能源汽车维修检测工作流程及岗位能力需求的调研，从中获得新能源汽车使用与维修工作流程，以及汽车维修工作所需的职业技能目标、知识学习目标与素质目标，在此基础上进行课程教学内容的设计。</dd>
+		<dd style="text-indent:2em">到企业进行工作岗位、电动汽车维修检测工作流程及岗位能力需求的调研，从中获得电动汽车结构与维修（理实一体）工作流程，以及汽车维修工作所需的职业技能目标、知识学习目标与素质目标，在此基础上进行课程教学内容的设计。</dd>
 		<dd style="text-indent:2em">(2)将企业岗位任务转化成教学任务</dd>
-		<dd style="text-indent:2em">1)新能源汽车维修人才培养目标引领</dd>
+		<dd style="text-indent:2em">1)电动汽车维修人才培养目标引领</dd>
 		<dd class="text-center"><%= image_tag("course_4/setup1.png")%></dd>
 		<dd style="text-indent:2em">2)课程教学任务引领</dd>
 		<dd class="text-center"><%= image_tag("course_4/setup2.png")%></dd>
@@ -48,27 +48,27 @@
 <div class="contrainer-fluid course-content-step-div" style="display: none;">
 	<dl>
 		<dt>一．课程性质</dt>
-		<dd>新能源汽车使用与维修》课程根据新能源汽车后市场检测维修行业及车辆交通管理部门的需求，以培养新能源车辆检测维修岗位专业人员为根本目标的拓展创新专业课程，是高等职业技术院校新能源汽车专业方向的一门专业核心课程。</dd>
+		<dd>电动汽车结构与维修（理实一体）》课程根据电动汽车后市场检测维修行业及车辆交通管理部门的需求，以培养新能源车辆检测维修岗位专业人员为根本目标的拓展创新专业课程，是高等职业技术院校电动汽车专业方向的一门专业核心课程。</dd>
 		<dd>本课程是学院精品课程。</dd>
 		<dt>二. 课程作用</dt>
-		<dd style="text-indent:2em">《新能源汽车使用与维修》课程的开发是基于新能源汽车专业面向新兴的新能源汽车维护、修理、故障诊断等职业岗位工作过程，融通国家劳动保障部新能源汽车维修职业标准而开发的创新拓展课程。因而课程具有如下显著作用：</dd>	
-		<dd>1．《新能源汽车使用与维修》 课程对新能源汽车专业学生职业能力培养和职业素养的养成起到了支撑作用。使学生获得一定的社会能力、方法能力和专业能力，促进学生就业具有显著的作用。</dd>
-		<dd>2．《新能源汽车使用与维修》课程在新能源汽车专业职业能力培养中的专业性地位更加突出，特别是新能源汽车使得课程在汽车类专业核心课程群中起到重要的基础和桥梁的作用。</dd>
-		<dd>3．《新能源汽车使用与维修》 课程目标与专业培养目标之间的衔接要更加紧密，课程知识目标、技能目标和能力素质目标应具体明确，符合学校办学定位，符合高职学生学习基础的实际。</dd>
+		<dd style="text-indent:2em">《电动汽车结构与维修（理实一体）》课程的开发是基于电动汽车专业面向新兴的电动汽车维护、修理、故障诊断等职业岗位工作过程，融通国家劳动保障部电动汽车维修职业标准而开发的创新拓展课程。因而课程具有如下显著作用：</dd>	
+		<dd>1．《电动汽车结构与维修（理实一体）》 课程对电动汽车专业学生职业能力培养和职业素养的养成起到了支撑作用。使学生获得一定的社会能力、方法能力和专业能力，促进学生就业具有显著的作用。</dd>
+		<dd>2．《电动汽车结构与维修（理实一体）》课程在电动汽车专业职业能力培养中的专业性地位更加突出，特别是电动汽车使得课程在汽车类专业核心课程群中起到重要的基础和桥梁的作用。</dd>
+		<dd>3．《电动汽车结构与维修（理实一体）》 课程目标与专业培养目标之间的衔接要更加紧密，课程知识目标、技能目标和能力素质目标应具体明确，符合学校办学定位，符合高职学生学习基础的实际。</dd>
 		<dd>4．本课程的职业岗位指向明确，职业能力要求具体。</dd>
 		<dd>5．本课程目标能充分体现学生的工作能力、学习能力、应用能力、协作能力和创新能力的培养。  </dd>
 		<dt>三. 课程目标（课程定位）</dt>
-		<dd>课程的人才培养目标：通过学、练、做有机结合的课程教学实施，让学生学习与掌握新能源汽车结构特点、工作机理、新能源汽车安全使用及维修等相关专业知识，训练与掌握新能源汽车安全使用、维修职业技能，养成汽车服务职业岗位必需的职业素养与团队合作精神，岗位所需的相关知识和技能，培养学生成为汽车行业迫切需要的高级应用性复合性新能源汽车技术人才。</dd>
+		<dd>课程的人才培养目标：通过学、练、做有机结合的课程教学实施，让学生学习与掌握电动汽车结构特点、工作机理、电动汽车安全使用及维修等相关专业知识，训练与掌握电动汽车安全使用、维修职业技能，养成汽车服务职业岗位必需的职业素养与团队合作精神，岗位所需的相关知识和技能，培养学生成为汽车行业迫切需要的高级应用性复合性电动汽车技术人才。</dd>
 		<dt>1．课程建设目标</dt>
 		<dd>体现选进性、综合性、开放性。以提高教学质量为核心，改革教学模式、教学
 		内容、教学方法和教学手段。加强理论联系实际，着重培养学生实践技能的操作能力职业素养。力争经过1~2年的努力，通过信息化教学平台将教学资源库和课程网站建设成为乃至全国知名的学习网站之一。</dd>
 		<dt>2．课程教学改革具体目标  </dt>
-		<dd>根据新能源汽车后市场检测维修行业及车辆、交通管理部门的需求，以培养新能源汽车检测、维修岗位专业人员为根本目标。</dd>
-		<dd>按照新能源汽车维修企业工作岗位的要求，参照国家职业资格认证标准和相关专业技术人员职业水平考核，结合工学结合的人才培养模式，以提高学生的职业技术能力和职业素养为中心，坚持以学生为本的教育理念，改革课程结构和教学内容，制定以突出职业能力培养的课程标准，规范课程教学的基本要求。</dd>
-		<dd>以工学结合的专业核心课程群建设为出发点，构建《新能源汽车使用与维修》课程教学平台，校企合作、工学结合，共建《新能源汽车使用与维修》课程教学资源库。完成开发以新能源汽车使用与维修的工作过程为引领，建立课程理实一体化教学体系。</dd>
+		<dd>根据电动汽车后市场检测维修行业及车辆、交通管理部门的需求，以培养电动汽车检测、维修岗位专业人员为根本目标。</dd>
+		<dd>按照电动汽车维修企业工作岗位的要求，参照国家职业资格认证标准和相关专业技术人员职业水平考核，结合工学结合的人才培养模式，以提高学生的职业技术能力和职业素养为中心，坚持以学生为本的教育理念，改革课程结构和教学内容，制定以突出职业能力培养的课程标准，规范课程教学的基本要求。</dd>
+		<dd>以工学结合的专业核心课程群建设为出发点，构建《电动汽车结构与维修（理实一体）》课程教学平台，校企合作、工学结合，共建《电动汽车结构与维修（理实一体）》课程教学资源库。完成开发以电动汽车结构与维修（理实一体）的工作过程为引领，建立课程理实一体化教学体系。</dd>
 		<dd>与汽车维修行业、企业的专家、专业核心课程骨干教师合作开发的配套教学的教材、课件和软件，形成工学结合、实践为先、特色并具有示范作用的专业精品课程。
 		与此同时，形成一个优秀精干的教学团队。</dd>
-		<dd>上述课程教学目标具有如下特色：课程目标与新能源汽车专业方向培养目标之
+		<dd>上述课程教学目标具有如下特色：课程目标与电动汽车专业方向培养目标之
 		间的衔接更加紧密，课程知识目标、技能目标和能力素质目标应具体明确，符合学院办学定位，符合高职高专学生学习基础的实际。<br>
 		课程的职业岗位指向明确，职业能力要求具体。</dd>
 		<dd> 课程目标能充分体现学生的工作能力、学习能力、应用能力、协作能力和创新能力的培养。<br>
@@ -80,7 +80,7 @@
 <!-- 多种教学方法的运用 -->
 <div class="contrainer-fluid course-content-step-div" style="display: none;">
 	<dl>
-		<dd style="text-indent:2em"> 在设计《新能源汽车使用与维修》课程的教学方法时，我们突出“理论、实践一体化，教、学、做一体化”的运用，要求教师将理论课与实训课有机地结合在一起来组织教学。结合本课程的特点，注重学生的各方面能力的培养，我们采用一系列教学方法：</dd>
+		<dd style="text-indent:2em"> 在设计《电动汽车结构与维修（理实一体）》课程的教学方法时，我们突出“理论、实践一体化，教、学、做一体化”的运用，要求教师将理论课与实训课有机地结合在一起来组织教学。结合本课程的特点，注重学生的各方面能力的培养，我们采用一系列教学方法：</dd>
 		<dd>上课的形式采用行动导向法、任务教学法以及情景模拟法等。</dd>
 		<dt style="color:#5086C5">（一）“情景教学法”</dt>
 		<dd>“情景教学法”将企业实景搬进课堂，把课堂搬到车间，课堂再现生产车间的真实场景，场景按照4S店实际维修环境搭建，课堂再现企业维修真实环境。</dd>
@@ -107,13 +107,13 @@
 		<dt>3．设疑，启发学生思考。</dt>
 		<dd style="text-indent:2em">通过讲解与技能训练培养学生学习兴趣，通过训练消化重点，根据技能训练的情况及时评价、鼓励学生，重在让学生弄清楚本学习任务的知识点，而不是死记硬背一个理论。在指导学生方面，由于学生理解能力，原有基础及对先修课的掌握程度，可采用因人施教的方法，让有一定基础的学生带动基础较弱的同学，分成几个小组，采用讨论，小组发言等形式，增强学生的学习兴趣和对课程的理解能力。</dd>
 		<dt style="color:#5086C5">（五）任务驱动教学法</dt>
-		<dd style="text-indent:2em">利用校内汽车实训中心的现有实践条件，有针对性地进行《新能源汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》 等技能训练的任务实施，使学生具备新能汽车拆装、维护和主要零部件耗损检测的技能。使学生熟悉新能源汽车主要车型的故障检测仪及仪器仪表，严格按作业项目、技术规范和工艺要求进行认真操作。</dd>
+		<dd style="text-indent:2em">利用校内汽车实训中心的现有实践条件，有针对性地进行《电动汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》 等技能训练的任务实施，使学生具备新能汽车拆装、维护和主要零部件耗损检测的技能。使学生熟悉电动汽车主要车型的故障检测仪及仪器仪表，严格按作业项目、技术规范和工艺要求进行认真操作。</dd>
 		<dt>1．案例教学法</dt>	
-		<dd style="text-indent:2em">在任务教学过程中，采用了典型的故障车和新能源汽车主要零部件的故障排除案例。通过课堂案例分析，将车辆发生的故障案例和主要零部件的耗损分析引入课堂，使学生加深对故障的分析、诊断与排除。</dd>
+		<dd style="text-indent:2em">在任务教学过程中，采用了典型的故障车和电动汽车主要零部件的故障排除案例。通过课堂案例分析，将车辆发生的故障案例和主要零部件的耗损分析引入课堂，使学生加深对故障的分析、诊断与排除。</dd>
 		<dt>2．现场教学法</dt>
-		<dd style="text-indent:2em">根据新能源汽车实训基地的现有设备和教学情况，安排部分技能训练项目进行现场教学。混合动汽车普锐斯轿车专用智能故障诊断仪、的使用方法和操作步骤等相关环节，安排现场教学，增加对课堂教学的直观认识，真正的“做中学”。</dd>
+		<dd style="text-indent:2em">根据电动汽车实训基地的现有设备和教学情况，安排部分技能训练项目进行现场教学。混合动汽车普锐斯轿车专用智能故障诊断仪、的使用方法和操作步骤等相关环节，安排现场教学，增加对课堂教学的直观认识，真正的“做中学”。</dd>
 		<dt>3．集体教学与个别教学相结合。</dt>
-		<dd style="text-indent:2em">建立新能源汽车兴趣小组，组织学生学习新能源汽车专业技能，稳定学生专业思想，激发学习兴趣，培养学生热爱专业、勇于探索、敢于创新的能力。注重学生在真实工程环境中的实践锻炼，安排学生暑期到校外实践教学基地实习，到上海同济大学汽车科研所参观学习，鼓励学生到生产第一线去锻炼，在工作现场解决实际问题，锻炼了学生的适应能力、处理人际关系的能力。此外案例教学法，多媒体组合教学法等都很好地集实践性、针对性和综合性于一体，构建了一个师生共同参与、理论与实践结合的教学过程，效果良好。</dd>
+		<dd style="text-indent:2em">建立电动汽车兴趣小组，组织学生学习电动汽车专业技能，稳定学生专业思想，激发学习兴趣，培养学生热爱专业、勇于探索、敢于创新的能力。注重学生在真实工程环境中的实践锻炼，安排学生暑期到校外实践教学基地实习，到上海同济大学汽车科研所参观学习，鼓励学生到生产第一线去锻炼，在工作现场解决实际问题，锻炼了学生的适应能力、处理人际关系的能力。此外案例教学法，多媒体组合教学法等都很好地集实践性、针对性和综合性于一体，构建了一个师生共同参与、理论与实践结合的教学过程，效果良好。</dd>
 		<dt>4. 团队工作法。</dt>
 		<dd style="text-indent:2em">通过大家合作完成一项工作任务，在完成过程中都是靠所有组员一起合作完成，比如汽车动力系统的二级维护，在操作的过程中，学生在汽车动力系统维护的工作过程中往往需要互相协作配合。此时便要会合集体的力量，集思广义，才能顺利完成汽车动力系统维护的项目。这样不但可以提高学生的思考能力，同时可以培养学生的团结协作能力。
 理实一体的教学模式，让学生“学中做、做中学”教学才有生命力，专业招生才有希望，教学改革才有发展。</dd>
@@ -129,31 +129,31 @@
 		<dd style="text-indent:2em">2012年7月，在济光学院项目的基础上共同申报了《校校企协同教学应用的探索》并通过专家评审。2012年11月，被教育部批准了第一批信息化试点单位—教技函[2012]70号济光-新侨-校校共建具有校际与校企间协同教学的优质教学资源课程共享服务的SAKAI平台。</dd>
 		<dt>2．CRP校园网，“空中课堂”“课堂中心”教学平台</dt>
 		<dd style="text-indent:2em">目前，学院又投资建成了CRP校园网，“空中课堂”“课堂中心”教学平台。</dd>
-		<dd style="text-indent:2em">本课程具有丰富的网络课程的教学资源丰富，包括：多媒体课件、微课、录相（可以手机登录学习）及技能考证项目操作微视频 、电子教案、新能源汽车技能训练指导书、习题库、试题库、教学大纲、教学计划、答疑室和参考资料等教学辅助资料。学生通过网络与任课教师进行交流，可以提高学生的学习积极性和主动性，扩大学生的知识面。
-		《新能源汽车使用与维修》课程PPT微课及特种电工、汽车修理电工考证项目实践操作微视频已经上网，学生随时可以上网下载学习，进行答疑交流。特别是对新能源汽车纯电动汽车、混合动力汽车的类型、结构、原理、拆装、维修、检测等内容可以及时了解与掌握。课程教学资料库存储了全国乃至国际的新能源汽车新技术、新动态随时可以打开查阅。</dd>
-		<dd style="text-indent:2em">在网络教学提供了丰富的软件资源。同时，新能源汽车专业方向还购置了一批国内外先进的汽车教学软件和多媒体教学光盘供大家学习。</dd>
+		<dd style="text-indent:2em">本课程具有丰富的网络课程的教学资源丰富，包括：多媒体课件、微课、录相（可以手机登录学习）及技能考证项目操作微视频 、电子教案、电动汽车技能训练指导书、习题库、试题库、教学大纲、教学计划、答疑室和参考资料等教学辅助资料。学生通过网络与任课教师进行交流，可以提高学生的学习积极性和主动性，扩大学生的知识面。
+		《电动汽车结构与维修（理实一体）》课程PPT微课及特种电工、汽车修理电工考证项目实践操作微视频已经上网，学生随时可以上网下载学习，进行答疑交流。特别是对电动汽车纯电动汽车、混合动力汽车的类型、结构、原理、拆装、维修、检测等内容可以及时了解与掌握。课程教学资料库存储了全国乃至国际的电动汽车新技术、新动态随时可以打开查阅。</dd>
+		<dd style="text-indent:2em">在网络教学提供了丰富的软件资源。同时，电动汽车专业方向还购置了一批国内外先进的汽车教学软件和多媒体教学光盘供大家学习。</dd>
 	</dl>
 </div>
 <!-- 教学模式的设计与创新 -->
 <div class="contrainer-fluid course-content-step-div" style="display: none;">
 	<dl>
 		<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 基于职业岗位典型工作任务和工作过程，开发课程</p>
-		<dd style="text-indent:2em">1．深入企业生产第一线，研究新能源汽车检测维修工作过程及汽车电工电力维修工作过程的知识和能力要求，融入职业道德和先进企业文化，以企业工作任务为引领，完成了《新能源汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》等10个核心技能项目的建设。设计了７个工作岗位核心任务、　55个学习情境和30个技能训练的任务实施、任务评价考核标准等内容。教学中全部采用新能源汽车检测维修与汽车电工电力检修车间的真实案例素材，按照资讯→决策→制定计划→任务实施→知识→检查评估→评价反馈→ 任务小结→ 强化练习等构架知识能力体系。较好地培养了学生自主学习能力与职业能力。</dd>
+		<dd style="text-indent:2em">1．深入企业生产第一线，研究电动汽车检测维修工作过程及汽车电工电力维修工作过程的知识和能力要求，融入职业道德和先进企业文化，以企业工作任务为引领，完成了《电动汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》等10个核心技能项目的建设。设计了７个工作岗位核心任务、　55个学习情境和30个技能训练的任务实施、任务评价考核标准等内容。教学中全部采用电动汽车检测维修与汽车电工电力检修车间的真实案例素材，按照资讯→决策→制定计划→任务实施→知识→检查评估→评价反馈→ 任务小结→ 强化练习等构架知识能力体系。较好地培养了学生自主学习能力与职业能力。</dd>
 		<dd style="text-indent:2em">2．进行社会调查，走访企业，聘请行业、企业专家和技术人员共同参与课程建设，让检测维修行业、企业技术骨干利用周末参与课程教学和教学建设，相互交流，互利互补，使课程教学与生产一线工作任务实现“零距离”融合。</dd>
 		<dd class="text-center"><%= image_tag("course_4/setup2.png")%></dd>
 		<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 按德国双元制教学模式，实施理实一体任务驱动教学</p>
-		<dd>1．通过大量的企业调研，对新能源汽车维修岗位及汽车电工电力岗位进行工作任务分析，按德国双元制教学模式，按照工作过程系统化的课程开发理念， 都以工作任务为教学载体，将技能学习和训练、理论学习和运用有机结合，充分发挥学生在教学中的主体作用，着力培养学生承担社会责任的能力，独立发现和解决问题的能力，在实践中自主学习的能力。</dd>
+		<dd>1．通过大量的企业调研，对电动汽车维修岗位及汽车电工电力岗位进行工作任务分析，按德国双元制教学模式，按照工作过程系统化的课程开发理念， 都以工作任务为教学载体，将技能学习和训练、理论学习和运用有机结合，充分发挥学生在教学中的主体作用，着力培养学生承担社会责任的能力，独立发现和解决问题的能力，在实践中自主学习的能力。</dd>
 		<dd style="text-indent:2em">每个情境通过一个真实的案例导入，要解决这个案例需要完成若干项目或任务，在完成任务的过程中学习相关知识内容。</dd>
-		<dd style="text-indent:2em">《新能源汽车使用与维修》课程强调的是思路和方法，每个任务的安排都借鉴汽车维修企业的新能源汽车各工作流程、故障诊断处理流程，用最准确、最有效的方法结合数字万用表、专用检测诊断仪、示波器等专业维修设备的使用来完成混合动力汽车、纯电动汽车、动力蓄电池、充电桩的正确使用与诊断、维修任务，培养学生正确的规范操作和故障诊断思路及正确的维修方法。</dd>
-		<dt>2．利用校内新能源汽车实训基地</dt>
-		<dd>利用校内新能源汽车实训基地的现有实践条件，有针对性地进行检测等技能任务的训练，使学生具备汽车动力系统拆装和主要零部件耗损检测的技能。使学生熟悉主要车型的汽车动力系统故障检测仪及仪器仪表，严格按作业项目、技术规范和工艺要求进行认真操作。</dd>
+		<dd style="text-indent:2em">《电动汽车结构与维修（理实一体）》课程强调的是思路和方法，每个任务的安排都借鉴汽车维修企业的电动汽车各工作流程、故障诊断处理流程，用最准确、最有效的方法结合数字万用表、专用检测诊断仪、示波器等专业维修设备的使用来完成混合动力汽车、纯电动汽车、动力蓄电池、充电桩的正确使用与诊断、维修任务，培养学生正确的规范操作和故障诊断思路及正确的维修方法。</dd>
+		<dt>2．利用校内电动汽车实训基地</dt>
+		<dd>利用校内电动汽车实训基地的现有实践条件，有针对性地进行检测等技能任务的训练，使学生具备汽车动力系统拆装和主要零部件耗损检测的技能。使学生熟悉主要车型的汽车动力系统故障检测仪及仪器仪表，严格按作业项目、技术规范和工艺要求进行认真操作。</dd>
 		<dt>3．充分体现了以任务为主线，学生为主体，教师为主导。</dt>
 		<dd>以任务为主线，学生为主体，教师为主导，将所要学习的新知识融合在任务情境之中。学生在老师的指导下，探索自主学习，讨论交流，进行总结，分析存在问题。让学生学会分析、学会与人合作、学会总结反思。充分体现学生的主体地位，真正实现“教、学、做一体”，以保证良好的教学效果。</dd>
 		<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 工学结合实战化训练</p>
-		<dd>1．采用真实的新能源汽车的故障车或动力蓄电池、动力发动机、动力变速驱动桥、电机与控制系统、能量供给系统等案例进行诊断、分析与排除。针对新能源汽车检测与维修行业、汽车电工电力行业的职业岗位设计教学内容。以任务为主线，把课程教学演变成连贯的可操作的职业岗位的技能训练，主要通过理实一体化教学、案例教学实现，培养学生的综合能力。</dd>
+		<dd>1．采用真实的电动汽车的故障车或动力蓄电池、动力发动机、动力变速驱动桥、电机与控制系统、能量供给系统等案例进行诊断、分析与排除。针对电动汽车检测与维修行业、汽车电工电力行业的职业岗位设计教学内容。以任务为主线，把课程教学演变成连贯的可操作的职业岗位的技能训练，主要通过理实一体化教学、案例教学实现，培养学生的综合能力。</dd>
 		<dt>2．“顶岗实习”增强学生社会实践能力</dt>
 		<dd style="text-indent:2em">充分利用校校外实践基地，让学生到上海大众汽车集团有限公司、上海中科力帆电动汽车有限公司等企业的有关岗位，开展16周的顶岗实习。让学生参与到实际的生产工作中去，负责一个岗位的工作。聘请企业技术人员负责课程的实践教学指导任务，在企业中完成真实的工作任务。学生在学习过程中可以学习到专业知识外，还可以学习到有关企业管理、企业文化、职业规范等知识。为上岗奠定坚实基础。</dd>
-		<dd style="text-indent:2em">以实际任务工作单进行，如：《新能源汽车安全规范维修作业》、《混合动力汽车故障诊断任务工作单》、《混合动力汽车工作模式试验任务工作单》、《动力蓄电池组件检验任务工作单》、《纯电动汽车实车检验任务工作单》、《动力电机不解体检验任务工作单》、《动力电池续航里程短的故障检修任务工作单》、《充电桩的使用与维修任务工作单》等。</dd>
+		<dd style="text-indent:2em">以实际任务工作单进行，如：《电动汽车安全规范维修作业》、《混合动力汽车故障诊断任务工作单》、《混合动力汽车工作模式试验任务工作单》、《动力蓄电池组件检验任务工作单》、《纯电动汽车实车检验任务工作单》、《动力电机不解体检验任务工作单》、《动力电池续航里程短的故障检修任务工作单》、《充电桩的使用与维修任务工作单》等。</dd>
 		<dd>
 			<span style="margin:20px"><%= image_tag("course_4/setup4.png")%></span>
 			<span style="margin:20px"><%= image_tag("course_4/setup5.png")%></span>
