--- a/app/views/courses/4/_teach_compare.html.erb
+++ b/app/views/courses/4/_teach_compare.html.erb
@@ -1,9 +1,9 @@
 <dl>
 	<dd style="text-indent:2em">
-		 经过近二年的课程改革和建设，新能源汽车专业课程基本处于国内同类课程中领先地位，并达到国内、外同类课程的水平。
+		 经过近二年的课程改革和建设，电动汽车专业课程基本处于国内同类课程中领先地位，并达到国内、外同类课程的水平。
 	</dd>
 	<dd style="text-indent:2em">
-		《新能源汽车使用与维修》课程是校企合作的产物，来源于新能源汽车电工电力行业和汽车维修行业，符合汽车检测维修行业的岗位要求。经过不断的课程改革、建设，并引进国内、外高等职业教育先进的思想、理念，在课程内容的先进性、创新性、科学性等方面又有了显著的提高，主讲教师对课程的性质、内容认识深刻，教学经验比较丰富，教学方法采取多元化，教学手段先进，实施校企合作、校校合作、工学结合，丰富了教学资源，课程设计、教学实践环节设计、网络资源设计。与市内外同类课程相比，因此本课在国内同类课程中处于领先的地位，并达到了国外同类课程的水平。
+		《电动汽车结构与维修（理实一体）》课程是校企合作的产物，来源于电动汽车电工电力行业和汽车维修行业，符合汽车检测维修行业的岗位要求。经过不断的课程改革、建设，并引进国内、外高等职业教育先进的思想、理念，在课程内容的先进性、创新性、科学性等方面又有了显著的提高，主讲教师对课程的性质、内容认识深刻，教学经验比较丰富，教学方法采取多元化，教学手段先进，实施校企合作、校校合作、工学结合，丰富了教学资源，课程设计、教学实践环节设计、网络资源设计。与市内外同类课程相比，因此本课在国内同类课程中处于领先的地位，并达到了国外同类课程的水平。
 	</dd>
 	<dd style="text-indent:2em">本课程教学团队的建设已经启动；青年教师的培养有计划、落实好，同时还注重了教师的继续教育与深造，积极推进“双师制”工作，使教师队伍充满生机活力。</dd>
 	<dd style="text-indent:2em">本课程特别注重理论与实践相结合，特别强调其实用性和现实运用性。强调拓展、实践训练和管理，本土特色也正是我们这一门课同其他院校的区别，也是我们的一大特色。</dd>
