--- a/app/views/courses/4/_teach_feature.html.erb
+++ b/app/views/courses/4/_teach_feature.html.erb
@@ -1,6 +1,6 @@
 <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持校企合作、依托产学研基地，开展“双主体”教学团队</p>
 <dl>
-	<dd style="text-indent:2em"> 根据学院精神要求，新能源汽车专业方向坚持校校合作、校企合作的原则，紧紧依托产学研基地，建立双师双向交流机制。共同研究新能源汽车专业发展规划、课程建设和课程改革。坚持“双主体”教学，加大教师进企业锻炼的力度，利用寒暑假，每学期选派专业骨干教师到企业实践学习，2014年选派12名教师、2015年6月选派7名教师，先后到上海汽车集团大众有限公司、上海中科力帆电动车有限公司、上海中科深江电动车辆有限公司和深圳市新能源汽车风向标教育资源股份有限公司产学研基地进行新能源汽车机电维修、汽车电工电力维修、零部件管理等岗位实践学习，同时选聘上海大众工业学校的专业教师郑老师 、企业骨干和专家，如：上海汽车集团商用车技术中心的邹滔亮、上海中科力帆电动车有限公司销售服务部经理刘彦如、深圳市新能源汽车风向标集团上海区域经理龙宇、华东区域刘建峰经理等专家，对专业教师进行专项培训与专业实践指导，同时直接参加新能源汽车专业课的教学任务，直接上讲台讲授新能源汽车维修知识，对学生进新能源汽车技能培训、职业道德教育。</dd>
+	<dd style="text-indent:2em"> 根据学院精神要求，电动汽车专业方向坚持校校合作、校企合作的原则，紧紧依托产学研基地，建立双师双向交流机制。共同研究电动汽车专业发展规划、课程建设和课程改革。坚持“双主体”教学，加大教师进企业锻炼的力度，利用寒暑假，每学期选派专业骨干教师到企业实践学习，2014年选派12名教师、2015年6月选派7名教师，先后到上海汽车集团大众有限公司、上海中科力帆电动车有限公司、上海中科深江电动车辆有限公司和深圳市电动汽车风向标教育资源股份有限公司产学研基地进行电动汽车机电维修、汽车电工电力维修、零部件管理等岗位实践学习，同时选聘上海大众工业学校的专业教师郑老师 、企业骨干和专家，如：上海汽车集团商用车技术中心的邹滔亮、上海中科力帆电动车有限公司销售服务部经理刘彦如、深圳市电动汽车风向标集团上海区域经理龙宇、华东区域刘建峰经理等专家，对专业教师进行专项培训与专业实践指导，同时直接参加电动汽车专业课的教学任务，直接上讲台讲授电动汽车维修知识，对学生进电动汽车技能培训、职业道德教育。</dd>
 	<dd style="text-indent:2em"> 坚持校企合作，实现校企深度合作、依托产学研基地，充分利用外校和企业资源，开展“双主体”教学，及时调整课程内容。
 	</dd>
 </dl>
@@ -8,13 +8,13 @@
 <dl>
 	<dd style="text-indent:2em">即：目标引领、任务引领、职业资格证引领、职业标准引领的课程建设。</dd>
 	<dd style="text-indent:2em">目标引领：对职业岗位培养目标、职业知识要求、职业能力、职业素质的具体要求设置教学活动实现能力、知识、素质的三结合。</dd>
-	<dd style="text-indent:2em">任务引领：按照新能源汽车后市场的检测维修技术领域和职业岗位（群）实际要求的工作任务和职业能力分析为依据，构建以工作岗位为学习任务，工作过程为学习过程的课程教学设计，创新顶岗实习教学模式。</dd>
-	<dd style="text-indent:2em"> 职业资格证引领：以汽车电工电力行业、新能源汽车维修行业制定的职业能力标准和国家统一职业资格等级证书制度为依据，以培养学生的职业能力、职业道德及可持续发展能力为出发点，把岗位职业能力标准作为教学核心内容。</dd>
-	<dd style="text-indent:2em">职业标准引领：按照新能源汽车相关岗位的工作职责及工作流程，将工作过程转化为课程教学过程，每个任务的安排都借鉴汽车维修企业的新能源汽车各工作流程、故障诊断处理流程，用最准确、最有效的方法结合数字万用表、专用检测诊断仪、示波器等专业维修设备的使用来完成混合动力汽车、纯电动汽车、动力蓄电池、充电桩的正确使用与诊断、维修任务，培养学生正确的规范操作和故障诊断思路及正确的维修方法。</dd>
-	<dd style="text-indent:2em">《新能源汽车使用与维修》课程内容设计为七个相互关联的工作岗位任务单元，每个任务下又设计了若干个学习情境，具体的操作步骤和方法构建了集理论、方法、实践操作为一体的理实一体化的教学内容体系。</dd>
+	<dd style="text-indent:2em">任务引领：按照电动汽车后市场的检测维修技术领域和职业岗位（群）实际要求的工作任务和职业能力分析为依据，构建以工作岗位为学习任务，工作过程为学习过程的课程教学设计，创新顶岗实习教学模式。</dd>
+	<dd style="text-indent:2em"> 职业资格证引领：以汽车电工电力行业、电动汽车维修行业制定的职业能力标准和国家统一职业资格等级证书制度为依据，以培养学生的职业能力、职业道德及可持续发展能力为出发点，把岗位职业能力标准作为教学核心内容。</dd>
+	<dd style="text-indent:2em">职业标准引领：按照电动汽车相关岗位的工作职责及工作流程，将工作过程转化为课程教学过程，每个任务的安排都借鉴汽车维修企业的电动汽车各工作流程、故障诊断处理流程，用最准确、最有效的方法结合数字万用表、专用检测诊断仪、示波器等专业维修设备的使用来完成混合动力汽车、纯电动汽车、动力蓄电池、充电桩的正确使用与诊断、维修任务，培养学生正确的规范操作和故障诊断思路及正确的维修方法。</dd>
+	<dd style="text-indent:2em">《电动汽车结构与维修（理实一体）》课程内容设计为七个相互关联的工作岗位任务单元，每个任务下又设计了若干个学习情境，具体的操作步骤和方法构建了集理论、方法、实践操作为一体的理实一体化的教学内容体系。</dd>
 </dl>
 <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 借鉴学习德国双元制，实施理实一体化教学模式</p>
 <dl>
-	<dd style="text-indent:2em">坚持国际化教育方向，培养学生国际视野，通过汽车运用技术专业引入中德诺浩汽车机电维修与检测技师特色班的应用技术型人才培养教材、教学模式等资源，为我所用。对新能源汽车维修岗位及汽车电工电力岗位进行工作任务分析，按德国双元制教学模式，按照工作过程系统化的课程开发理念， 以工作任务为教学载体，按照资讯→决策→制定计划→任务实施→知识→检查评估→评价反馈→ 任务小结→ 强化练习等构架知识能力体系。将技能学习和训练、理论学习和运用有机结合，充分发挥学生在教学中的主体作用，着力培养学生承担社会责任的能力，独立发现和解决问题的能力，在实践中自主学习的能力。</dd>
+	<dd style="text-indent:2em">坚持国际化教育方向，培养学生国际视野，通过汽车运用技术专业引入中德诺浩汽车机电维修与检测技师特色班的应用技术型人才培养教材、教学模式等资源，为我所用。对电动汽车维修岗位及汽车电工电力岗位进行工作任务分析，按德国双元制教学模式，按照工作过程系统化的课程开发理念， 以工作任务为教学载体，按照资讯→决策→制定计划→任务实施→知识→检查评估→评价反馈→ 任务小结→ 强化练习等构架知识能力体系。将技能学习和训练、理论学习和运用有机结合，充分发挥学生在教学中的主体作用，着力培养学生承担社会责任的能力，独立发现和解决问题的能力，在实践中自主学习的能力。</dd>
 	<dd style="text-indent:2em">教学方式实现五个转变：教学从“知识的传递”向“知识的处理和转换”转变；教师从“单一型”向“双师型”转变；学生由“被动接受的模仿型”向“主动实践、手脑并用的创新型”转变；教学组织形式由“固定教室、集体授课”向“室内外专业学习站、实习车间”转变；教学手段由“口授、黑板”向“实物、现场情景、多媒体、网络化、信息化、现代化教育技术”转变。</dd>
 </dl>
