--- a/app/views/courses/4/_teach_innovate.html.erb
+++ b/app/views/courses/4/_teach_innovate.html.erb
@@ -1,11 +1,11 @@
 
 <dl>
-	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 全市第一个建立新能源汽车专业方向</p>
-	<dd style="text-indent:2em">上海市开设汽车类专业学校，中职学校36所、高职院校13所、本科院校5所，唯我校看准新能源汽车后市场的发展，第一个建立新能源汽车专业方向。</dd>
-	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校企合作共同开发新能源汽车课程</p>
-	<dd style="text-indent:2em">新能源汽车课程教材没有先列，无参考资料。专业教师深入企业生产第一线，研究新能源汽车检测维修工作过程及汽车电工电力维修工作过程的知识和能力要求，融入职业道德和先进企业文化，以企业工作任务为引领，完成了《新能源汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》等10个核心技能项目的建设。</dd>
-	<dd style="text-indent:2em"> 与中科力帆电动汽车有限公司合作编写《新能源汽车维护及保养实训指导手册》基本完成。正在与上海中科深江电动车车辆有限公司合作编写《电池及管理系统》。
-	新能源汽车课程开发得到上海市教委的资金支持与政策支持。</dd>	
+	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 全市第一个建立电动汽车专业方向</p>
+	<dd style="text-indent:2em">上海市开设汽车类专业学校，中职学校36所、高职院校13所、本科院校5所，唯我校看准电动汽车后市场的发展，第一个建立电动汽车专业方向。</dd>
+	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校企合作共同开发电动汽车课程</p>
+	<dd style="text-indent:2em">电动汽车课程教材没有先列，无参考资料。专业教师深入企业生产第一线，研究电动汽车检测维修工作过程及汽车电工电力维修工作过程的知识和能力要求，融入职业道德和先进企业文化，以企业工作任务为引领，完成了《电动汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》等10个核心技能项目的建设。</dd>
+	<dd style="text-indent:2em"> 与中科力帆电动汽车有限公司合作编写《电动汽车维护及保养实训指导手册》基本完成。正在与上海中科深江电动车车辆有限公司合作编写《电池及管理系统》。
+	电动汽车课程开发得到上海市教委的资金支持与政策支持。</dd>	
 	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 建立完善教学质量考核评价体系</p>
 	<dt>（1）对教师考核评价</dt>
 	<dd style="text-indent:2em">落实学院教学管理规定，确保教学活动规范有序，开展了对教师的职业道德素养和职业能力的考核，使孝在工作过程中不断认识自我、发展自我、完善自我，实现不同层次的发展目标。
@@ -15,6 +15,6 @@
 	<dd style="text-indent:2em">学院CRP的网上评教的基础上，进一步优化与改进学生评教体系，注重学生对教师教学过程和教学效果的感知性评价，根据课程性质与类型设计差异化的评价指标，完善学生评教分数的处理方式，落实学生评教反馈机制。</dd>
 	<dt>（3）教学效果评价</dt>
 	<dd style="text-indent:2em">以考察学生能力提高为目标的教学效果评价体系，通过考核学生培养目标需要的各项能力情况，反映教学效果与课程体系的合理性。</dd>
-	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 建立一流的新能源汽车实训基地</p>
-	<dd>新建立的新能源汽车实训基地，设备齐全、功能一流。完全能够满足新能源汽车，如：混合动力汽车、纯电动汽车的结构、原理等教学，电工电力检测操作、新能源汽车主要部件的拆装、维护与保养、修理与检测等技能操作作业。</dd>
+	<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 建立一流的电动汽车实训基地</p>
+	<dd>新建立的电动汽车实训基地，设备齐全、功能一流。完全能够满足电动汽车，如：混合动力汽车、纯电动汽车的结构、原理等教学，电工电力检测操作、电动汽车主要部件的拆装、维护与保养、修理与检测等技能操作作业。</dd>
 </dl>
