--- a/app/views/courses/4/_course_data.html.erb
+++ b/app/views/courses/4/_course_data.html.erb
@@ -1,1 +1,77 @@
-_course_data.html.erb
+<%= content_for :script do %>
+  <%= javascript_include_tag  "modal_pdf", 'data-turbolinks-track' => false %>
+<%end%>
+
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
+<ul class="container-fluid">
+  <li class="col-sm-12"><strong>教学录像</strong></li>
+  <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">电动汽车结构与维修说课夏月琴</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+  </li>
+  <li class="col-sm-12"><strong>申请表</strong></li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">课程负责人情况夏月琴</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">主讲教师1黄虎</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">主讲教师2袁春华</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">主讲教师3张璐嘉</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">主讲教师情况</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申报材料课程团队</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请材料课程设置</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表教学内容</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表教学方法与教学手段</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表实践教学</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表教学效果</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表特色与创新</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表课程建设</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">申请表学校的政策与措施</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">其他说明</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">附件1.精品课程申报表（高职）交的</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+</ul>
