--- a/app/views/courses/4/_course_team.html.erb
+++ b/app/views/courses/4/_course_team.html.erb
@@ -1,1 +1,94 @@
-_course_team.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>教学团队</strong></a>
+<br><br>
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_4/teacher1.png",width:"200", height:"260")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">夏月琴<small>（上海新侨职业技术学院汽车工程系）</small></h3>
+    <p>课程负责人&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;高级工程师</p>
+    <span><strong>1969.10-1976.01</strong> 内蒙古加格达奇农场下乡</span><br>
+    <span><strong>1976.01-1982.04</strong>辽宁省辽阳市交通局技术处 处负责人负责车辆改造（车辆四项节能改造）、技改项目、车辆定额指标考核等工作。</span><br>
+    <span><strong>1982.04-1990.01</strong> 辽宁省辽阳市运输公司技术经理、总工程师负责技术 安全处等。</span><br>
+    <span><strong>1990.01-2003.01</strong>辽宁省辽阳技师学院汽车系&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;专任教师</span>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_4/teacher2.png",width:"200", height:"260")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">黄虎<small>（上海新侨职业技术学院）</small></h3>
+    <p>高级工程师</p>
+    <p style="margin:10px 0"><strong>1994年10月</strong>调入上海工程技术大学之前，一直在东风汽车集团技术中心从事产品开发工作，时间长达十多年，从事汽车底盘设计开发。任工程师、高级工程师，担任底盘开发部主任。<br>
+		<strong>2010年6月</strong>在退休前，在上海工程技术大学汽车学院担任常务副院长、汽车研究所所长，<br>
+    <strong>2010月8月</strong>在上海大学巴士汽车学院工作，担任工程系主任和实训中心主任。<br>
+    <strong>2014年11月</strong>在上海工商职业技术学院汽车系工作至今，担任汽车工程系主任。
+    </p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_4/teaher3.png",width:"200", height:"260")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">袁春华<small>（上海新侨职业技术学院）</small></h3>
+    <p>讲师／工程师&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;硕士</p>
+    <p style="margin:10px 0"><strong>1990年9月～1994年7月</strong>西安电子科技大学 通信工程学院 图像传输与处理专业，本科在读； <br> 
+    <strong>1994年7月～1998年6月</strong>
+     河北省电子信息产业总公司软件部（近1年）C语言程序员；程控交换机生产厂（1年，筹备开厂）在河北保定某程控交换机生产厂参加了3周程控交换机生产、质检等内容的培训，并到武汉采购筹备开厂所必需的电子仪器设备（1995年评为电子工程助理工程师）；维修部（2年多）从事计算机软硬件维修，打印机、UPS等设备的硬件维修及维修配件的销售；<br>
+     <strong>1998年7月～2001年3月</strong>
+     河北省计算机软件中心  市场部（近2年）从事计算机售后维修、市场销售、营销管理等工作。历任维修站站长、市场部经理等职（1999年评为电子工程工程师）；科研开发部（1年）独立负责自动售货机电气部分的软硬件研发及必需仪器设备的采购（河北省科委项目），项目研制成功后办理了停薪留职；<br>
+     <strong>2001年4月～2003年8月</strong>
+     河北省电子信息产业总公司；<br>
+     <strong>2003年9月～2006年4月</strong>   
+     上海大学机电工程与自动化学院硕士研究生在读；<br>
+     <strong>2006年2月～至今 </strong>
+    上海新侨职业技术学院教师（2008年评为讲师，2010年任汽车工程系副主任，分管教学）。
+    2015年1月～2015年7月  University of Hertfordshire  教育学硕士（2016年毕业）</p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_4/teacher4.png",width:"200", height:"260")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">张璐嘉<small>（上海新侨职业技术学院）</small></h3>
+    <p>助教／技师&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究生</p>
+    <p><strong>2006.7至2007.7</strong> 上海汽车工业西上海销售有限公司，服务部职员；<br>
+    <strong>2007.9至今</strong> 上海新侨职业技术学院，汽车工程系教师；<br>
+    <strong>2008.9至2011.1</strong> 上海同济大学本科学习，机械设计制造及其自动化；<br>
+    <strong>2011.1至今 </strong>弘成学苑常州数字化学习中心，外聘学业顾问；<br>
+    <strong>2012.9至今</strong> 华东师范大学教育工程硕士，学生在读；<br>
+    <strong>2014.07</strong> 德国黑森州大盖劳职业学院进修学习；<br>
+    <strong>2012.2至今</strong> 上海市嘉定区交通职业技术培训中心，外聘“理实一体化”教师。</p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_4/teacher5.png",width:"200", height:"260")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">林金地<small>（上海新侨职业技术学院）</small></h3>
+    <p style="margin:10px 0">汽车维修高级技师</p>
+    <p><strong>2006年至今</strong> 上海工商职业技术学院（原上海新侨职业技术学院）负责汽车专业的中高级工考证及实训室建设。<br>
+    <strong>2008年</strong> 荣获嘉定区第三届职业技能竞赛的职工组项目个人二等奖，并晋升为“汽车维修工技师”<br>
+    <strong>2012年11月</strong> 荣获市教委颁发上海市高职高专汽车类职业技能竞赛优秀指导教师奖<br>
+    <strong>2015年</strong>上海市“星光计划”第六届职业技能大赛指导学生获得汽车检测与维修项目三等奖。
+    </p>
+  </div>
+</div>
