--- a/app/views/courses/4/_main.html.erb
+++ b/app/views/courses/4/_main.html.erb
@@ -3,12 +3,12 @@
   <a href="javascript:void(0)" class="material public-common-style">申报材料</a>
   <a href="javascript:void(0)" class="setup public-common-style">课程设置</a>
   <a href="javascript:void(0)" class="team public-common-style">教学队伍</a>
-  <a href="javascript:void(0)" class="condition public-common-style">教学条件</a>
-  <a href="javascript:void(0)" class="method public-common-style">教学方法</a>
+  <a href="javascript:void(0)" class="condition public-common-style">校企合作</a>
+  <a href="javascript:void(0)" class="method public-common-style">工学结合</a>
   <a href="javascript:void(0)" class="content public-common-style">教学内容</a>
-  <a href="javascript:void(0)" class="resource public-common-style">教学资源</a>
+  <a href="javascript:void(0)" class="resource public-common-style">课程资源</a>
   <a href="javascript:void(0)" class="effect public-common-style">教学效果</a>
-  <a href="javascript:void(0)" class="policy public-common-style">特色与政策</a>
+  <a href="javascript:void(0)" class="policy public-common-style">互动平台</a>
 </div>
 <div class="category-list-content">
   <div class="text-content">
@@ -24,22 +24,22 @@
     <%= render partial: "courses/4/course_team", locals: {teacher_courses: teacher_courses} %>
   </div>
   <div class="text-content">
-    <%= render partial: "courses/4/course_condition", locals: {course: @course} %>
+    <%= render partial: "courses/4/teamwork", locals: {course: @course} %>
   </div>
   <div class="text-content">
-    <%= render partial: "courses/4/course_method", locals: {course: @course} %>
+    <%= render partial: "courses/4/combine", locals: {course: @course} %>
   </div>
   <div class="text-content">
     <%= render partial: "courses/4/course_content", locals: {course: @course} %>
   </div>
   <div class="text-content">
-    <%= render partial: "courses/4/course_resource", locals: {course: @course} %>
+    <%= render partial: "courses/4/teacher_resource", locals: {course: @course} %>
   </div>
   <div class="text-content">
     <%= render partial: "courses/4/course_effect", locals: {course: @course} %>
   </div>
   <div class="text-content">
-    <%= render partial: "courses/4/course_policy", locals: {course: @course} %>
+    <%= render partial: "courses/4/platform", locals: {course: @course} %>
   </div>
 </div>
 <div class="fast-entry">
